# solana-ua-bootcamp-2025-03-19

practice-1/: README.md
practice-1/bootcamp-solana-rust/: Cargo.toml
practice-1/solana-training/: README.md  check-balance.ts  generate-keypair.ts  package-lock.json  package.json
practice-2/favorites/: Anchor.toml  package.json
practice-2/favorites/programs/favorites/src/: lib.rs
practice-2/favorites/tests/: favorites.ts
