[package]
name = "bootcamp-solana-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
dotenvy = "0.15.7"
metaplex-token-metadata = "0.0.1"
mpl-token-metadata = "5.1.0"
serde_json = "1.0.140"
solana-client = "2.2.6"
solana-sdk = "2.2.2"
spl-associated-token-account = "6.0.0"
spl-token = "8.0.0"
